# myapps-common

./: README.md  front_protocol_auth.hpp  front_protocol_core.hpp  front_protocol_main.hpp  ola_front_protocol.hpp  ola_front_protocol_auth.hpp  ola_front_protocol_common.hpp  ola_front_protocol_core.hpp  ola_front_protocol_init.hpp  ola_front_protocol_main.hpp
utility/: CMakeLists.txt  archive.hpp  crypto.hpp  encode.hpp  error.hpp  ola_error.hpp  ola_protocol.hpp  protocol.hpp  version.hpp  version_impl.hpp.in
utility/cmake/: version_configure_file.cmake
utility/src/: archive.cpp  crypto.cpp  encode.cpp  error.cpp  ola_error.cpp  version.cpp.in
utility/test/: CMakeLists.txt  test_archive.cpp  test_crypto_basic.cpp
